public-hosting/gatus/service-gatus.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus-public
spec:
  selector: { app.kubernetes.io/name: gatus }
  ports:
    - { name: http, port: 80, targetPort: http }
